--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "maiketech/php",
+    "name": "maiketech/maike-php",
     "type": "project",
     "autoload": {
         "psr-4": {
@@ -13,18 +13,37 @@
         }
     ],
     "require": {
-        "php": ">=8.0.0",
-        "topthink/framework": "^6.1",
+        "php": ">=8.0",
+        "topthink/framework": "^8.0",
         "topthink/think-orm": "^3.0",
         "topthink/think-filesystem": "^2.0",
         "topthink/think-multi-app": "^1.0",
-        "spatie/macroable": "^2.0",
-        "firebase/php-jwt": "^6.4",
-        "phpoffice/phpword": "^1.1",
-        "dompdf/dompdf": "^2.0"
+        "topthink/think-captcha": "^3.0",
+        "topthink/think-cors": "^1.0",
+        "maiketech/maike-core": "^1.0"
     },
     "require-dev": {
         "symfony/var-dumper": "^4.2",
         "topthink/think-trace": "^1.0"
-    }
+    },
+    "scripts": {
+        "post-autoload-dump": [
+            "@php think service:discover",
+            "@php think vendor:publish"
+        ]
+    },
+    "repositories": [
+        {
+            "description": "阿里云镜像",
+            "type": "composer",
+            "url": "https://mirrors.aliyun.com/composer/",
+            "canonical": false
+        },
+        {
+            "description": "腾讯云镜像",
+            "type": "composer",
+            "url": "https://mirrors.cloud.tencent.com/composer/",
+            "canonical": false
+        }
+    ]
 }
