--- a/.example.env
+++ b/.example.env
@@ -10,4 +10,5 @@ DB_CHARSET = utf8
 
 DEFAULT_LANG = zh-cn
 DEFAULT_TIMEZONE = Asia/Shanghai
-APP_KEY = "N4OLyXbngKzCPZQsc9SxMYR3whv1F7il"
+APP_KEY = N4OLyXbngKzCPZQsc9SxMYR3whv1F7il
+CACHE_PREFIX = maike_
